# kortex

./: 404.html  index.html  mkdocs.yml  pyproject.toml
api_python/examples/: utilities.py
api_python/examples/000-Getting_Started/: 05-notification.py
api_python/examples/102-Movement_high_level/: 01-move_angular_and_cartesian.py  05-movement_high_level.py
api_python/examples/106-Gripper_command/: 01-gripper_command.py
api_python/examples/107-Gripper_low_level_command/: 01-gripper_low_level_command.py
api_python/examples/110-Waypoints/: 01-send_angular_wapoint_trajectory.py  03-go_to_waypoints.py
api_python/examples/rria_api/: clear_fault.py  emergency_stop.py  emergency_stop_func.py
docs/: index.md  kortex_api_references.md
docs/stylesheets/: extra.css
enums/ActuatorConfig/CoggingFeedforwardMode/: index.html
enums/ActuatorConfig/ControlLoopSelection/: index.html
examples/python/: index.html
kortex_api_references/: index.html
linked_md/cpp_device_routing/: index.html
linked_md/cpp_transport_router_session_notif/: index.html
linked_md/modbus_icd/: index.html
linked_md/python_device_routing/: index.html
linked_md/python_servoing_modes/: index.html
linked_md/python_transport_router_session_notif/: index.html
search/: search_index.json
site/: index.html
site/search/: search_index.json
stylesheets/: extra.css
summary_pages/ActuatorConfig/: index.html
summary_pages/ActuatorCyclic/: index.html
summary_pages/BaseCyclic/: index.html
summary_pages/Common/: index.html
summary_pages/DeviceConfig/: index.html
(+433 files in other folders)
